--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "dev": "babel src -d dist --watch",
+    "dev-packages": "babel src -d dist --watch",
     "test": "mocha --timeout 5000 --require @babel/register ./test{/,/**/}*.spec.js",
     "lint": "eslint src --fix --ext .js",
     "coverage": "nyc --reporter=html npm test",
