--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "author": "Adam Cowley <github@adamcowley.co.uk>",
   "license": "MIT",
   "dependencies": {
-    "@hapi/joi": "^15.1.1",
     "dotenv": "^16.0.1",
+    "joi": "^17.9.2",
     "neo4j-driver": "^5.6.0",
     "uuid": "^9.0.0"
   },
